# templateGL

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  camera.h  fragment.shader  hi.cpp  makefile  model.cpp  object.cpp  object.h  shaders.cpp  shaders.h  testGL.cpp  vertex.shader
assets/: CMakeLists.txt
core/: camera.cpp  frame_timer.cpp  frame_timer.h  looplog.cpp  looplog.h  model.h  object.cpp  object.h
openGL_test/: makefile  testGL.cpp  vertex.shader
src/: CMakeLists.txt
src/__PROJECT__/: CMakeLists.txt  __PROJECT__.cpp
src/core/: CMakeLists.txt  camera.cpp  camera.h  frame_timer.cpp  frame_timer.h  looplog.cpp  looplog.h  model.cpp  model.h  object.cpp  object.h  path_util.h  shaders.cpp  shaders.h
src/pilot_wave/: CMakeLists.txt  testGL.cpp
